--- a/src/resources/path.properties
+++ b/src/resources/path.properties
@@ -16,10 +16,7 @@ interface.baseDir=com.dataone.dist.ordering.mapper
 
 #mysql configuration start
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url = jdbc:mysql://47.95.14.214:3409/exchange_risk?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&rewriteBatchedStatements=true
 jdbc.url=jdbc:mysql://127.0.0.1:3306/demo1013?serverTimezone=UTC&characterEncoding=utf-8
-#jdbc.username = exchange
-#jdbc.password = TTjIHkVb16oLWZtw
 jdbc.username=root
-jdbc.password=liuhaoyang
+jdbc.password=myname
 #mysql configuration end
