--- a/src/resources/path.properties
+++ b/src/resources/path.properties
@@ -9,14 +9,14 @@ model.targetProject=/Users/liuhaoyang/Documents/work/auto_file
 #mapper.baseDir=com.chainup.exchange.dao.sqlmapper
 #interface.baseDir=com.chainup.exchange.dao
 
-model.baseDir=com.dataone.dist.ordering.model.bean
-mapper.baseDir=com.dataone.dist.ordering.mapper
-interface.baseDir=com.dataone.dist.ordering.mapper
+model.baseDir=com.mzdata.gi.ordering.core.man.bean
+mapper.baseDir=com.mzdata.gi.ordering.core.service.mapper
+interface.baseDir=com.mzdata.gi.ordering.core.service.mapper
 #dir end
 
 #mysql configuration start
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/demo1013?serverTimezone=UTC&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/new_ordering?serverTimezone=UTC&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=myname
+jdbc.password=liuhaoyang
 #mysql configuration end
